--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <p>Comida</p>
     </div>
     <div class="content-center-galeries">
-        <img src="/img/producto1.png" alt="img1-center"> 
-        <img src="/img/producto2.png" alt="img2-center">
-        <img src="/img/producto3.png" alt="img3-center">
+        <img src="img/producto1.png" alt="img1-center"> 
+        <img src="img/producto2.png" alt="img2-center">
+        <img src="img/producto3.png" alt="img3-center">
     </div>
   </section>
     <section>
@@ -101,7 +101,7 @@
   </section>
   <div class="conten-suscripcion-usuario">
     <div class="izquierda">
-      <img src="/img/enviar-correo 1.png" alt="">
+      <img src="img/enviar-correo 1.png" alt="">
       <p class="suscripcion">Suscribete para mas novedades</p>
     </div>
     <div class="derecha">
@@ -113,17 +113,17 @@
   <footer>
     <div class="Informacion-usuario">
       <p>
-        <img src="/img/ubicacion.png" alt="ubicacion" class="icono-footer">
+        <img src="img/ubicacion.png" alt="ubicacion" class="icono-footer">
         <span class="lado-right">Localidad</span>
         <li class="debajo-lado-right">Calle-Provincia</li>
       </p>
       <p>
-        <img src="/img/Icono.png" alt="telefono" class="icono-footer">
+        <img src="img/Icono.png" alt="telefono" class="icono-footer">
         <span class="lado-right">Teléfono</span>
         <li class="debajo-lado-right" >Numero de telefono</li>
       </p>
       <p>
-        <img src="/img/correo (2).png" alt="correo"class="icono-footer">
+        <img src="img/correo (2).png" alt="correo"class="icono-footer">
         <span class="lado-right">Correo Electrónico</span>
         <li class="debajo-lado-right">Direccion de correo</li>
       </p>
